<resources>
    <string name="app_name">ColorConverter</string>
    <string name="hex">Hex</string>
    <string name="rgb">RGB</string>
    <string name="hashtag">#</string>
    <string name="hex_hint">Hex code</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="alpha">Alpha</string>
    <string name="picker">Color picker</string>
    <string name="default_hex">000000</string>
    <string name="default_red">0</string>
    <string name="default_green">0</string>
    <string name="default_blue">0</string>
    <string name="default_alpha">255</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="secondary_txt">Secondary color</string>
    <string name="err_picker_orientation">Color picker is not available in landscape mode</string>
    <string name="alpha_txt">Alpha</string>
</resources>
