<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="barryprojects.colorconverter.Main">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hex"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rgb"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:weightSum="2"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="151dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hashtag"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_hex"
                android:layout_weight="0.24"
                android:hint="@string/hex_hint"
                android:text="@string/default_hex" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgb_fields">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    style="@style/RGBEditText"
                    android:id="@+id/txt_red"
                    android:text="@string/default_red" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_red"
                    android:indeterminate="false"
                    android:max="@integer/rgb_max"
                    android:thumbTint="@color/red"
                    android:progressTint="@color/red" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <EditText
                    style="@style/RGBEditText"
                    android:id="@+id/txt_green"
                    android:text="@string/default_green" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_green"
                    android:indeterminate="false"
                    android:max="@integer/rgb_max"
                    android:thumbTint="@color/green"
                    android:progressTint="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <EditText
                    style="@style/RGBEditText"
                    android:id="@+id/txt_blue"
                    android:text="@string/default_blue" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_blue"
                    android:indeterminate="false"
                    android:max="@integer/rgb_max"
                    android:thumbTint="@color/blue"
                    android:progressTint="@color/blue" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_alpha">

                <EditText
                    style="@style/RGBEditText"
                    android:id="@+id/txt_alpha"
                    android:text="@string/default_alpha" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_alpha"
                    android:indeterminate="false"
                    android:max="@integer/rgb_max"
                    android:thumbTint="@color/black"
                    android:progressTint="@color/black"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/secondary_txt"
        android:id="@+id/disp_color"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/startingColor"
        android:background="@color/startingColor"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondary_txt"
        android:id="@+id/check_secondary"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_above="@+id/check_alpha" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha_txt"
        android:id="@+id/check_alpha"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_above="@+id/disp_color" />

</RelativeLayout>
